# grok-physics-engine

./: CMakeLists.txt  LICENSE  README.md
benchmarks/: bench_particles.cpp
docs/: architecture.md
examples/: basic_particles.cpp
include/physics/: ecs.hpp  math.hpp  world.hpp
include/physics/collision/: ccd.hpp  gjk_epa.hpp
include/physics/constraints/: joints.hpp  solver.hpp
include/physics/serial/: binary.hpp
tests/: fuzz_basic.cpp
